+typescript support for env_resolver, +es6 exports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
   "include": [
     "**/build.ts",
     "**/types.d.ts",
-    "*.ts"
+    "**/env_resolver.ts"
   ],
   "exclude": [
     "node_modules"
